--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "classnames": "^2.2.6",
+    "dotenv": "^8.2.0",
+    "elliptic": "^6.5.3",
+    "firebase": "^7.17.2",
     "lodash": "^4.17.15",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
