css modules, adding auth, adding firestore

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ REACT_APP_FIREBASE_KEY=AIzaSyD6JBn1uhYxy9YsQsNEHRtJEYaXJfodEA4
 REACT_APP_FIREBASE_DOMAIN=at-home-6eebc.firebaseapp.com"
 REACT_APP_FIREBASE_DATABASE=https://at-home-6eebc.firebaseio.com
 REACT_APP_FIREBASE_PROJECT_ID=at-home-6eebc
-REACT_APP_FIREBASE_STORAGE_BUCKET=at-home-6eebc.appspot.com
+REACT_APP_FIREBASE_STORAGE_BUCKET=gs://at-home-6eebc.appspot.com
 REACT_APP_FIREBASE_SENDER_ID=951686756556
 REACT_APP_FIREBASE_APP_ID=1:951686756556:web:e55f4a0453f0cfe8ee2a69
 REACT_APP_FIREBASE_MEASURE_ID=G-EDRSE1G7LH
