--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "elliptic": "^6.5.3",
     "firebase": "^7.17.2",
     "lodash": "^4.17.15",
+    "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
